--- a/src/FileExporter/FileExporter.csproj
+++ b/src/FileExporter/FileExporter.csproj
@@ -35,8 +35,15 @@
     <Reference Include="Dapper">
       <HintPath>..\packages\Dapper.1.42\lib\net45\Dapper.dll</HintPath>
     </Reference>
+    <Reference Include="Newtonsoft.Json, Version=8.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\Newtonsoft.Json.8.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
+    <Reference Include="PresentationCore" />
+    <Reference Include="PresentationFramework" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Xaml" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -45,11 +52,13 @@
     <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
+    <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BaseForm.cs">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="ExtensionsFramework.cs" />
     <Compile Include="PluginForms\InWay.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -68,6 +77,9 @@
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="PluginForms\InWay.resx">
+      <DependentUpon>InWay.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -76,6 +88,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
@@ -95,6 +108,14 @@
     <ProjectReference Include="..\AdoManager\AdoManager.csproj">
       <Project>{c6a52698-9c02-49f4-b848-cdffc6562215}</Project>
       <Name>AdoManager</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\BlurMessageBox\BlurMessageBox.csproj">
+      <Project>{036659e4-59f2-4485-bfed-3627ecea2fbc}</Project>
+      <Name>BlurMessageBox</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Windows.Forms.HintTextBox\Windows.Forms.HintTextBox.csproj">
+      <Project>{05faaa9a-132b-4057-a171-c0e184d399a6}</Project>
+      <Name>Windows.Forms.HintTextBox</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
