--- a/src/FileExporter/App.config
+++ b/src/FileExporter/App.config
@@ -4,8 +4,9 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
   </startup>
   <connectionStrings>
-    <add name="OldSale" connectionString="Data Source=factory;Initial Catalog=sale_markaz_1394;Password=H2389*x;Persist Security Info=True;User ID=saleadmin;" providerName="System.Data.SqlClient" />
+    <add name="SaleMarkaz" connectionString="Data Source=factory;Initial Catalog=sale_markaz_1394;Password=H2389*x;Persist Security Info=True;User ID=saleadmin;" providerName="System.Data.SqlClient" />
     <add name="Sale" connectionString="Data Source=192.168.30.41;Initial Catalog=SaleTabriz1394;Integrated Security=True" providerName="System.Data.SqlClient" />
     <add name="SaleCore" connectionString="Data Source=factory;Initial Catalog=SaleCore;Password=H2389*x;Persist Security Info=True;User ID=saleadmin;" providerName="System.Data.SqlClient" />
+    <add name="UM" connectionString="Data Source=dc;Initial Catalog=UsersManagements;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
