--- a/src/FileExporter/FileExporter.csproj
+++ b/src/FileExporter/FileExporter.csproj
@@ -32,6 +32,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="AdoManager, Version=1.0.3.34588, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\AdoManager.1.0.3\lib\net45\AdoManager.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Dapper">
       <HintPath>..\packages\Dapper.1.42\lib\net45\Dapper.dll</HintPath>
     </Reference>
@@ -43,6 +47,7 @@
     <Reference Include="PresentationFramework" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Net.Http" />
     <Reference Include="System.Xaml" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -119,10 +124,6 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\AdoManager\AdoManager.csproj">
-      <Project>{c6a52698-9c02-49f4-b848-cdffc6562215}</Project>
-      <Name>AdoManager</Name>
-    </ProjectReference>
     <ProjectReference Include="..\BlurMessageBox\BlurMessageBox.csproj">
       <Project>{036659e4-59f2-4485-bfed-3627ecea2fbc}</Project>
       <Name>BlurMessageBox</Name>
