update to new sale system and fix AdoManager win app bugs

--- a/src/FileExporter/App.config
+++ b/src/FileExporter/App.config
@@ -4,10 +4,10 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
   </startup>
   <connectionStrings>
-    <add name="SaleMarkaz" connectionString="Data Source=factory;Initial Catalog=sale_markaz_1394;Password=H2389*x;Persist Security Info=True;User ID=saleadmin;" providerName="System.Data.SqlClient" />
-    <add name="Sale" connectionString="Data Source=192.168.30.254;Initial Catalog=SaleTabriz1394;Integrated Security=True" providerName="System.Data.SqlClient" />
-    <add name="SaleCore" connectionString="Data Source=factory;Initial Catalog=SaleCore;Password=H2389*x;Persist Security Info=True;User ID=saleadmin;Connection Timeout=1000" providerName="System.Data.SqlClient" />
-    <!--<add name="SaleCore" connectionString="Data Source=dc;Initial Catalog=SaleCore;Integrated Security=True;Connection Timeout=1000" providerName="System.Data.SqlClient" />-->
-    <add name="UM" connectionString="Data Source=192.168.30.254;Initial Catalog=UsersManagements;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="SaleMarkaz" connectionString="Data Source=dc;Initial Catalog=sale_markaz_1395;Password=#0407A93;Persist Security Info=True;User ID=saleadmin;" providerName="System.Data.SqlClient" />
+    <add name="Sale" connectionString="Data Source=dc;Initial Catalog=SaleTabriz;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="SaleCore" connectionString="Data Source=dc;Initial Catalog=SaleCore;Password=#0407A93;Persist Security Info=True;User ID=saleadmin;Connection Timeout=10000" providerName="System.Data.SqlClient" />
+    <add name="UM" connectionString="Data Source=dc;Initial Catalog=UsersManagements;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <!--<add name="SaleMarkaz" connectionString="Data Source=dc;Initial Catalog=sale_markaz_1395;Integrated Security=True" providerName="System.Data.SqlClient" />-->
   </connectionStrings>
 </configuration>
