--- a/src/FileExporter/packages.config
+++ b/src/FileExporter/packages.config
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="AdoManager" version="1.0.3" targetFramework="net45" developmentDependency="true" />
-  <package id="Dapper" version="1.42" targetFramework="net45" />
+  <package id="AdoManager" version="1.1.52" targetFramework="net45" developmentDependency="true" />
+  <package id="AutoVersionUpdater" version="1.0.0" targetFramework="net45" developmentDependency="true" />
+  <package id="Clarius.TransformOnBuild-unofficial" version="1.20" targetFramework="net45" developmentDependency="true" />
+  <package id="Dapper" version="1.50.2" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="8.0.2" targetFramework="net45" />
 </packages>
